Prevent flickernig of spin animation on fast history loads

--- a/src/styles/_animation.less
+++ b/src/styles/_animation.less
@@ -10,3 +10,8 @@
 .spin {
   animation: spin 2s infinite linear;
 }
+
+.spin-delay {
+	.spin();
+	animation-delay: 0.2s;
+}
